fix(category-picker): add scrollbar to category picker
Summary:
fixes T3564

the problem was that the user couldn't tell that the folder & label lists contained more folders & labels than was shown. so i added a scrollbar to make it clearer.

Test Plan: tested manually. all tests still green.

Reviewers: evan, bengotow

Reviewed By: bengotow

Maniphest Tasks: T3564

Differential Revision: https://phab.nylas.com/D2029

--- a/static/components/popover.less
+++ b/static/components/popover.less
@@ -11,7 +11,7 @@
   max-height:400px;
   background-color: @background-color;
   border-radius: @border-radius-base;
-  overflow: hidden;
+  overflow: scroll;
   box-shadow: 0 0.5px 0 rgba(0, 0, 0, 0.15), 0 -0.5px 0 rgba(0, 0, 0, 0.15), 0.5px 0 0 rgba(0, 0, 0, 0.15), -0.5px 0 0 rgba(0, 0, 0, 0.15), 0 4px 7px rgba(0,0,0,0.15), inset 0 0 1px rgba(0,0,0,0.5);
 
   .menu {
